# tca

./: .gitignore  README.md  ccg-diagram.md  ccg-spec.md  construction-lifecycle.md  pyproject.toml  tca.md
tca/: building_block.py
